<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/trans_root"
    android:orientation="vertical">
    <include layout="@layout/base_top_toolbar"/>

    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_vertical">
        <TextView
            style="@style/match.wrap"
            android:layout_weight="3"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/friend_nick"/>
        <RelativeLayout
            style="@style/match.wrap"
            android:layout_weight="1">
            <EditText
                android:id="@+id/nickName"
                android:enabled="true"
                android:hint="@string/friend_nick_hint"
                android:textColorHint="@color/bg_99"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                style="@style/service_input"/>
            <View style="@style/service_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_below="@id/nickName"
                android:layout_marginTop="@dimen/dp_8"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_5">
        <TextView
            style="@style/match.wrap"
            android:layout_weight="3"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/contact_mail"/>
        <RelativeLayout
            style="@style/match.wrap"
            android:layout_weight="1">
            <EditText
                android:id="@+id/contactMail"
                android:enabled="true"
                android:hint="@string/contact_mail_hint"
                android:textColorHint="@color/bg_99"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                style="@style/service_input"/>
            <View style="@style/service_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_below="@id/contactMail"
                android:layout_marginTop="@dimen/dp_8"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_5">
        <TextView
            style="@style/match.wrap"
            android:layout_weight="3"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/friend_id"/>
        <RelativeLayout
            style="@style/match.wrap"
            android:layout_weight="1">
            <EditText
                android:id="@+id/friendId"
                android:enabled="true"
                android:hint="@string/is_input"
                android:textColorHint="@color/bg_99"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                style="@style/service_input"/>
            <View style="@style/service_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_below="@id/friendId"
                android:layout_marginTop="@dimen/dp_8"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_5">
        <TextView
            style="@style/match.wrap"
            android:layout_weight="3"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/pgp_pubkey"/>
        <RelativeLayout
            style="@style/match.wrap"
            android:layout_weight="1">
            <EditText
                android:id="@+id/pgp_key"
                android:enabled="true"
                android:hint="@string/is_input"
                android:textColorHint="@color/bg_99"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                style="@style/service_input"/>
            <View style="@style/service_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_below="@id/pgp_key"
                android:layout_marginTop="@dimen/dp_8"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:onClick="onClick"
        style="@style/login_btn"
        android:background="@drawable/bg_complete_btn"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/dp_25"/>
    <TextView
        style="@style/wrap"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/nickName_hint"
        android:textColor="@color/bg_99"/>
</LinearLayout>