<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_20253A"
    android:fitsSystemWindows="true">
    <include layout="@layout/base_top_toolbar"/>

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/match"
        android:overScrollMode="never">
        <LinearLayout
            style="@style/match.wrap.ver_linear">
            <TextView
                style="@style/service_title"
                android:text="@string/score_address"/>
            <EditText
                android:id="@+id/score_address"
                style="@style/service_input"
                tools:text="http://www.baidu.com/score"/>
            <View style="@style/service_line" />

            <TextView
                style="@style/service_title"
                android:text="@string/candy_address" />
            <EditText
                android:id="@+id/candy_address"
                style="@style/service_input"
                tools:text="http://www.baidu.com/candy"/>
            <View style="@style/service_line"/>

            <TextView
                style="@style/service_title"
                android:text="@string/log_address"/>
            <EditText
                android:id="@+id/log_address"
                style="@style/service_input"
                tools:text="http://www.baidu.com/log"/>
            <View style="@style/service_line"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>