<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match.ver_linear"
    android:fitsSystemWindows="true"
    android:background="@color/bg_272F4F">
    <RelativeLayout
        style="@style/wrap">
        <include layout="@layout/base_top_toolbar"/>
        <ImageView
            android:id="@+id/sendIcon"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_user_head"
            android:layout_marginLeft="@dimen/dp_60"/>
        <TextView
            android:id="@+id/nickName"
            style="@style/wrap"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            tools:text="王小虎"
            android:singleLine="true"
            android:layout_toRightOf="@id/sendIcon"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/mailAddress"
            style="@style/wrap"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            tools:text="2222@qq.com"
            android:singleLine="true"
            android:layout_toRightOf="@id/sendIcon"
            android:layout_below="@id/nickName"
            android:layout_alignBottom="@id/sendIcon"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_50"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_vertical">
        <TextView
            style="@style/match.wrap"
            android:layout_weight="2.5"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/mail_contact"/>
        <RelativeLayout
            style="@style/match.wrap"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/contacts"
                android:src="@mipmap/logo"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:onClick="onClick"/>
            <EditText
                android:id="@+id/inUser"
                android:enabled="true"
                android:hint="@string/inUser_hint"
                android:textColorHint="@color/bg_99"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                style="@style/service_input"
                android:layout_toLeftOf="@id/contacts"/>
            <View style="@style/service_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_below="@id/contacts"
                android:layout_marginTop="@dimen/dp_8"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center_vertical">
        <TextView
            style="@style/match.wrap"
            android:layout_weight="2.5"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/subject_title"/>
        <RelativeLayout
            style="@style/match.wrap"
            android:layout_weight="1">

            <EditText
                android:id="@+id/subject"
                android:enabled="true"
                android:singleLine="false"
                android:maxHeight="@dimen/dp_80"
                android:hint="@string/subject_hint"
                android:textColorHint="@color/bg_99"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                style="@style/service_input"/>
            <View style="@style/service_line"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_below="@id/subject"
                android:layout_marginTop="@dimen/dp_8"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/match.wrap.hor_linear"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_vertical">
        <TextView
            style="@style/wrap"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/send_method"/>
        <RadioGroup
            android:id="@+id/sendMethod"
            style="@style/match.wrap.hor_linear">
            <RadioButton
                android:id="@+id/none"
                style="@style/wrap"
                android:button="@drawable/bg_radio_selector"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:text="@string/send_none"
                android:textColor="@color/selector_sendmethod_color"
                android:textSize="@dimen/sp_16"
                android:layout_weight="1"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"/>
            <RadioButton
                android:id="@+id/cf"
                style="@style/wrap"
                android:checked="true"
                android:button="@drawable/bg_radio_selector"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:text="@string/send_cf"
                android:textColor="@color/selector_sendmethod_color"
                android:textSize="@dimen/sp_16"
                android:layout_weight="1"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"/>
            <RadioButton
                android:id="@+id/pgp"
                style="@style/wrap"
                android:button="@drawable/bg_radio_selector"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:text="@string/send_pgp"
                android:textColor="@color/selector_sendmethod_color"
                android:textSize="@dimen/sp_16"
                android:layout_weight="1"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"/>
        </RadioGroup>
    </LinearLayout>
    <EditText
        android:id="@+id/content"
        style="@style/service_input"
        android:singleLine="false"
        android:background="@drawable/bg_gray_corners_shape"
        android:layout_height="match_parent"
        android:gravity="left|top"
        android:hint="@string/send_content"
        android:textColorHint="@color/bg_99"
        android:enabled="true"
        android:padding="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"/>
</LinearLayout>