<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match.ver_linear"
    android:fitsSystemWindows="true"
    android:background="@color/bg_20253A">

    <RelativeLayout
        style="@style/match.wrap"
        android:layout_height="180dp"
        android:background="@color/bg_272F4F">
        <View
            android:id="@+id/line"
            style="@style/hor_lin"
            android:visibility="invisible"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/userIcon"
            android:src="@mipmap/ic_user_head"
            android:scaleType="center"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_above="@id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-15dp"/>
        <TextView
            android:id="@+id/userName"
            style="@style/wrap"
            tools:text="LIMINGHANG98"
            android:textSize="@dimen/sp_14"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/userIcon"
            android:layout_marginTop="@dimen/dp_30"/>
    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_msg"
        style="@style/mine_ll"
        android:layout_marginTop="@dimen/dp_15">
        <TextView
            android:id="@+id/mine_msg"
            style="@style/mine_menu"
            android:text="@string/message_center"
            android:drawableLeft="@mipmap/ic_msg_center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about"
        style="@style/mine_ll"
        android:layout_marginTop="@dimen/dp_15">
        <TextView
            android:id="@+id/mine_us"
            style="@style/mine_menu"
            android:text="@string/about_us"
            android:drawableLeft="@mipmap/ic_news"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_set"
        style="@style/mine_ll">
        <TextView
            android:id="@+id/mine_settings"
            style="@style/mine_menu"
            android:text="@string/settings"
            android:drawableLeft="@mipmap/ic_account"/>
    </LinearLayout>
</LinearLayout>