<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/bg_20253A">
    <include layout="@layout/base_top_toolbar"/>
    <TextView
        android:id="@+id/tmp_tv"
        style="@style/wrap"
        android:textSize="@dimen/sp_15"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/login_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_top_toolbar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/tmpCard1"
        app:layout_constraintTop_toBottomOf="@id/tmp_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/word_card">
        <TextView
            android:id="@+id/login_word"
            style="@style/word_txt"
            tools:text="jkjsdifsljd kjdfisdfskljf kjdsifsdfl kjisdfsjdfis jfidsd lkjfisd sljfsid sdjfisdf sl"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tmp_tv1"
        style="@style/wrap"
        android:textSize="@dimen/sp_15"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/wallet_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tmpCard1"/>
    <android.support.v7.widget.CardView
        android:id="@+id/tmpCard2"
        app:layout_constraintTop_toBottomOf="@id/tmp_tv1"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/word_card">
        <TextView
            android:id="@+id/wallet_word"
            style="@style/word_txt"
            tools:text="jkjsdifsljd kjdfisdfskljf kjdsifsdfl kjisdfsjdfis jfidsd lkjfisd sljfsid sdjfisdf sl"/>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/complete"
        android:onClick="onClick"
        style="@style/login_btn"
        android:background="@drawable/bg_complete_btn"
        android:text="@string/complete"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tmpCard2"
        android:layout_marginTop="@dimen/dp_25"/>
</android.support.constraint.ConstraintLayout>