<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match.ver_linear"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/bg_20253A">
    <include layout="@layout/base_top_toolbar"/>
    <TextView
        style="@style/match.wrap"
        android:textSize="@dimen/sp_14"
        android:paddingTop="@dimen/dp_7"
        android:paddingBottom="@dimen/dp_7"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:background="@color/bg_FFF7EF"
        android:textColor="@color/bg_FF9331"
        android:lineSpacingExtra="1.2dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/pwd_hint"
        app:layout_constraintTop_toBottomOf="@id/base_top_toolbar"/>

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/match">
        <LinearLayout
            style="@style/match">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_60">
                <LinearLayout
                    android:id="@+id/ll_user"
                    style="@style/match.wrap.ver_linear"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12">
                    <LinearLayout
                        style="@style/match.wrap.hor_linear">
                        <TextView
                            style="@style/wrap"
                            android:text="身份名称："
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_14"/>
                        <TextView
                            style="@style/wrap"
                            android:textColor="@color/bg_D9"
                            android:text="只可以输入英文加数字组合20个字符以内（默认-）"
                            android:textSize="@dimen/sp_12"/>
                    </LinearLayout>
                    <EditText
                        android:id="@+id/userName"
                        style="@style/create_user_input"
                        android:digits="@string/input_digit"
                        android:hint="MYID01"/>
                    <View style="@style/hor_lin"
                        android:background="@color/bg_97"
                        android:layout_marginLeft="@dimen/dp_70"
                        android:layout_marginStart="@dimen/dp_70"
                        android:layout_marginTop="@dimen/dp_10"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_account"
                    style="@style/match.wrap.ver_linear"
                    app:layout_constraintTop_toBottomOf="@id/ll_user"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12">
                    <LinearLayout
                        style="@style/match.wrap.hor_linear">
                        <TextView
                            style="@style/wrap"
                            android:text="账户名称："
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_14"/>
                        <TextView
                            style="@style/wrap"
                            android:textColor="@color/bg_D9"
                            android:text="@string/create_user_hint"
                            android:textSize="@dimen/sp_12"/>
                    </LinearLayout>
                    <EditText
                        android:id="@+id/userAccount"
                        style="@style/create_user_input"
                        android:hint="MYACCOUNT01"
                        android:digits="@string/input_digit"/>
                    <View style="@style/hor_lin"
                        android:background="@color/bg_97"
                        android:layout_marginLeft="@dimen/dp_70"
                        android:layout_marginStart="@dimen/dp_70"
                        android:layout_marginTop="@dimen/dp_10"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_pwd"
                    style="@style/match.wrap.ver_linear"
                    app:layout_constraintTop_toBottomOf="@id/ll_account"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12">
                    <LinearLayout
                        style="@style/match.wrap.hor_linear"
                        android:gravity="center">
                        <TextView
                            style="@style/wrap"
                            android:text="登录密码："
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_14"/>
                        <TextView
                            style="@style/wrap"
                            android:textColor="@color/bg_D9"
                            android:text="@string/create_user_pwd_hint"
                            android:textSize="@dimen/sp_12"
                            android:layout_weight="1"/>
                        <CheckBox
                            android:id="@+id/toggle_pwd"
                            style="@style/wrap"
                            android:minWidth="@dimen/dp_40"
                            android:drawableRight="@drawable/bg_selector_pwd"
                            android:button="@null"/>
                    </LinearLayout>
                    <EditText
                        android:id="@+id/userPwd"
                        style="@style/create_user_input"
                        android:maxLength="-1"
                        android:inputType="textPassword"/>
                    <View style="@style/hor_lin"
                        android:background="@color/bg_97"
                        android:layout_marginLeft="@dimen/dp_70"
                        android:layout_marginStart="@dimen/dp_70"
                        android:layout_marginTop="@dimen/dp_10"/>
                </LinearLayout>

                <Button
                    android:id="@+id/next"
                    android:onClick="onClick"
                    style="@style/login_btn"
                    android:text="@string/next"
                    app:layout_constraintTop_toBottomOf="@id/ll_pwd"
                    android:layout_marginTop="@dimen/dp_35"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
